--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "pg": "^8.9.0"
+    "pg": "^8.9.0",
+    "stream": "^0.0.2"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
