--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.3.1",
     "morgan": "^1.10.0",
     "pg": "^8.9.0",
     "stream": "^0.0.2"
